Bug 417288 - Zoom and drag in log-log plot is broken.
Summary: Zoom and drag in log-log plot is broken.
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: latest
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-07 22:18 UTC by Andy Great
Modified: 2020-03-23 05:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
Video of zooming and draging the plot with minimum success. (1.72 MB, video/mp4)
2020-02-07 22:18 UTC, Andy Great
Details
log-log plot file use in video. (32.03 KB, application/x-labplot2)
2020-02-07 22:19 UTC, Andy Great
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Great 2020-02-07 22:18:33 UTC
Created attachment 125760 [details]
Video of zooming and draging the plot with minimum success.

Trying to zoom or drag a log-log plot will cause the plot to either exaggerated or too little. This seems to effect log-log plot significantly.

See log-log plot file and video as example.

 The labplot was install from my own branch 
https://build.opensuse.org/package/show/home:andythe_great:branches:openSUSE:Factory/labplot-kf5

Operating System: openSUSE Tumbleweed 20200205
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Kernel Version: 5.4.14-2-default
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-3770 CPU @ 3.40GHz
Memory: 7.5 GiB of RAM
Comment 1 Andy Great 2020-02-07 22:19:22 UTC
Created attachment 125761 [details]
log-log plot file use in video.
Comment 2 Alexander Semke 2020-03-22 15:53:11 UTC
Git commit 5b892796801802e17a18a46c0242219e98e760f6 by Alexander Semke.
Committed on 22/03/2020 at 15:51.
Pushed by asemke into branch 'master'.

[worksheet] properly change the plot data ranges with zoomig in the plot
with log10 scales. The same fix needs to be done for other scales and
also for shift functions in the plot.
FIXED-IN: 2.8

M  +73   -40   src/backend/worksheet/plots/cartesian/CartesianPlot.cpp
M  +1    -0    src/backend/worksheet/plots/cartesian/CartesianPlot.h

https://invent.kde.org/kde/labplot/commit/5b892796801802e17a18a46c0242219e98e760f6
Comment 3 Andy Great 2020-03-23 05:15:07 UTC
Zoom on log-log plot is now smooth, however if I zoom out too much to like 10^-300 labplot will crash, maybe set a limit to how much uer could zoom out or something.

Dragging on log-log plot is still not smooth.