[worksheet] properly change the plot data ranges with zoomig in the plot with log10 scales. The same fix needs to be done for other scales and also for shift functions in the plot.

BUG: 417288
FIXED-IN: 2.8